src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterPreSnapTriangles_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterPreSnapTriangles_StringErrorContext.class */
public final class NVConservativeRasterPreSnapTriangles_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glConservativeRasterParameteriNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVConservativeRasterPreSnapTrianglesErrorContext");
        return methods;
    }
}
